--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card" src="KAKAKAKA-removebg-preview.png" />
+        <img id="card" src="https://cdn.glitch.global/991205b1-7c4a-4c0d-b3b1-da502258ef9c/KAKAKAKA-removebg-preview.png?v=1685750547127" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
